Fixed z-index for the dialog so it stays over the tree

--- a/src/Skybrud.Umbraco.BorgerDk/App_Plugins/Skybrud.BorgerDk/Styles/_dialog.less
+++ b/src/Skybrud.Umbraco.BorgerDk/App_Plugins/Skybrud.BorgerDk/Styles/_dialog.less
@@ -9,6 +9,7 @@
     -moz-box-shadow: none;
     box-shadow: none;
     background: white;
+    z-index: 10000;
 }
 
 .borgerdk-dialog-header {
